<resources>
    <string name="app_name">Tokyo 2020</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="list_attractions">List attractions</string>
    <string name="wishlist">Wishlist</string>
    <string name="ratings">Ratings</string>

    <string name="overall_sked">Overall schedule</string>
    <string name="day_sked">Schedule by day</string>
    <string name="switch_to_admin_ui">Switch to Admin UI</string>
    <string name="logout">Logout</string>
    <string name="contact_us">Contact us</string>
    <string name="call_us"> Call us</string>
    <string name="send_an_sms"> Send an SMS</string>
    <string name="send_an_email"> Send an email</string>
    <string name="view_schedule_by_day">View schedule by day</string>
    <string name="set_game_reminder">Set game reminder</string>
    <string name="view_all_schedules">View all schedules</string>
    <string name="email">Email</string>
    <string name="email_hint">Enter email</string>
    <string name="password">Password</string>
    <string name="password_hint">Enter password</string>
    <string name="remember_me">Remember email and password</string>
    <string name="log_in">Log-in</string>
    <string name="sign_up">Sign-up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="switch_to_default_ui">Switch to default UI</string>

</resources>
