<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!--<group android:checkableBehavior="single">-->
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
    <!--</group>-->


    <item android:title="Attractions">
        <menu>
            <item
                android:id="@+id/list_attractions"
                android:icon="@drawable/ic_tourist_book"
                android:title="@string/list_attractions" />
            <item
                android:id="@+id/wishlist"
                android:icon="@drawable/ic_menu_wishlist"
                android:title="@string/wishlist" />
            <item
                android:id="@+id/ratings"
                android:icon="@drawable/ic_menu_ratings"
                android:title="@string/ratings" />
        </menu>
    </item>

    <item android:title="Olympics">
        <menu>
            <item
                android:id="@+id/view_all_sked"
                android:icon="@drawable/ic_menu_calendar"
                android:title="View all schedules" />
            <item
                android:id="@+id/view_sked_by_day"
                android:icon="@drawable/ic_menu_calendarday"
                android:title="View schedule by day" />
            <item
                android:id="@+id/set_reminder"
                android:icon="@drawable/ic_menu_bell"
                android:title="Set game reminder" />
        </menu>
    </item>

</menu>
